Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@i915_selftest@live@gt_lrc - incomplete - GEM_BUG_ON(!assert_pending_valid(execlists, "promote"))
0> [368.737123] i915_sel-5214 1.... 363162664us : i915_request_retire: 0000:00:02.0 rcs0: fence f637:2174, current 2242
<0> [368.737181] <idle>-0 3d.s2 363162664us : __i915_request_submit: 0000:00:02.0 rcs0: fence f637:2244, current 2242
<0> [368.737239] <idle>-0 3d.s2 363162665us : trace_ports: 0000:00:02.0 rcs0: submit { f637:2244, 0:0 }
<0> [368.737289] <idle>-0 3..s1 363162677us : process_csb: 0000:00:02.0 rcs0: cs-irq head=4, tail=5
<0> [368.737326] <idle>-0 3..s1 363162677us : process_csb: 0000:00:02.0 rcs0: csb[5]: status=0x10000001:0x00000000
<0> [368.737364] <idle>-0 3..s1 363162678us : trace_ports: 0000:00:02.0 rcs0: promote { f637:2244, 0:0 }
<0> [368.737400] <idle>-0 3..s1 363162678us : trace_ports: 0000:00:02.0 rcs0: preempted { f637:2242!, 0:0 }
<0> [368.737444] i915_sel-5214 1.... 363162683us : __i915_request_commit: 0000:00:02.0 rcs0: fence f637:2246, current 2242
<0> [368.737489] i915_sel-5214 1d..1 363162694us : __i915_request_submit: 0000:00:02.0 rcs0: fence f637:2246, current 2242
<0> [368.737531] i915_sel-5214 1d..1 363162698us : trace_ports: 0000:00:02.0 rcs0: submit { f637:2246, 0:0 }
<0> [368.737578] i915_sel-5214 1.... 363162702us : i915_request_retire: 0000:00:02.0 rcs0: fence f637:2176, current 2242
<0> [368.737621] <idle>-0 3..s1 363162707us : process_csb: 0000:00:02.0 rcs0: cs-irq head=5, tail=6
<0> [368.737661] <idle>-0 3..s1 363162707us : process_csb: 0000:00:02.0 rcs0: csb[6]: status=0x10000001:0x00000000
<0> [368.737700] <idle>-0 3..s1 363162737us : trace_ports: 0000:00:02.0 rcs0: promote { f637:2246, 0:0 }
<0> [368.737746] i915_sel-5214 1.... 363162740us : __i915_request_commit: 0000:00:02.0 rcs0: fence f637:2248, current 2242
<0> [368.737786] <idle>-0 3..s1 363162740us : trace_ports: 0000:00:02.0 rcs0: preempted { f637:2244, 0:0 }
<0> [368.737831] <idle>-0 3..s1 363162744us : process_csb: 0000:00:02.0 rcs0: cs-irq head=6, tail=7
<0> [368.737877] <idle>-0 3..s1 363162744us : process_csb: 0000:00:02.0 rcs0: csb[7]: status=0x10008002:0x00000060
<0> [368.737932] i915_sel-5214 1d..1 363162745us : __i915_request_submit: 0000:00:02.0 rcs0: fence f637:2248, current 2244
<0> [368.737970] i915_sel-5214 1d..1 363162746us : trace_ports: 0000:00:02.0 rcs0: submit { f637:2248, 0:0 }
<0> [368.738014] i915_sel-5214 1.... 363162749us : i915_request_retire: 0000:00:02.0 rcs0: fence f637:2178, current 2246
<0> [368.738057] i915_sel-5214 1.... 363162757us : __i915_request_commit: 0000:00:02.0 rcs0: fence f637:2250, current 2246
<0> [368.738096] <idle>-0 3..s1 363162759us : assert_pending_valid: Nothing pending for promotion!
<0> [368.738138] i915_sel-5214 1.... 363162762us : i915_request_retire: 0000:00:02.0 rcs0: fence f637:2180, current 2246
<0> [368.738176] <idle>-0 3..s1 363162765us : process_csb: process_csb:2377 GEM_BUG_ON(!assert_pending_valid(execlists, "promote"))
<0> [368.738180] ---------------------------------
<4> [368.738236] ------------[ cut here ]------------
<2> [368.738238] kernel BUG at drivers/gpu/drm/i915/gt/intel_lrc.c:2377!
<4> [368.738246] invalid opcode: 0000 [#1] PREEMPT SMP NOPTI
<4> [368.738251] CPU: 3 PID: 0 Comm: swapper/3 Tainted: G U W 5.6.0-rc6-CI-CI_DRM_8165+ #1
<4> [368.738254] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP, BIOS ICLSFWR1.R00.3175.A00.1904261428 04/26/2019
<4> [368.738291] RIP: 0010:process_csb+0x7ac/0x830 [i915]
<4> [368.738295] Code: 00 48 c7 c2 b0 eb 77 a0 48 c7 c7 91 9b 60 a0 e8 7a 91 b9 e0 bf 01 00 00 00 e8 b0 63 b9 e0 31 f6 bf 09 00 00 00 e8 94 86 aa e0 <0f> 0b 49 8b 87 08 06 00 00 e9 98 f9 ff ff 49 8b 87 08 06 00 00 48
<4> [368.738298] RSP: 0018:ffffc900001c8ea8 EFLAGS: 00010296
<4> [368.738302] RAX: ffff88888bd2c040 RBX: 0000000000000007 RCX: 0000000000000000
<4> [368.738304] RDX: 0000000000000046 RSI: 0000000000000000 RDI: 0000000000000009
<4> [368.738308] RBP: ffffc900001c8ef8 R08: 0000000000000000 R09: 0000000000000000
<4> [368.738310] R10: 0000000000000000 R11: 0000000000000000 R12: ffff8888799d2018
<4> [368.738312] R13: ffff8888799d24d0 R14: ffff8888799d2610 R15: ffff8888799d2000
<4> [368.738315] FS: 0000000000000000(0000) GS:ffff88888ff80000(0000) knlGS:0000000000000000
<4> [368.738317] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [368.738319] CR2: 0000559ab7fd09a0 CR3: 0000000005610003 CR4: 0000000000760ee0
<4> [368.738320] PKRU: 55555554
<4> [368.738321] Call Trace:
<4> [368.738324] <IRQ>
<4> [368.738381] execlists_submission_tasklet+0x2d/0x130 [i915]
<4> [368.738388] tasklet_action_common.isra.16+0x6c/0x1c0
<4> [368.738393] __do_softirq+0xdf/0x47f
<4> [368.738398] irq_exit+0xba/0xc0
<4> [368.738401] do_IRQ+0x83/0x160
<4> [368.738403] common_interrupt+0xf/0xf
<4> [368.738406] </IRQ>
<4> [368.738410] RIP: 0010:cpuidle_enter_state+0xb6/0x420
<4> [368.738414] Code: 00 31 ff e8 2c 30 8c ff 80 7c 24 0b 00 74 12 9c 58 f6 c4 02 0f 85 37 03 00 00 31 ff e8 f3 1e 93 ff e8 2e 47 97 ff fb 45 85 ed <0f> 88 cd 02 00 00 49 63 c5 4c 2b 24 24 48 8d 14 40 48 8d 14 90 48
<4> [368.738417] RSP: 0018:ffffc9000011be78 EFLAGS: 00000202 ORIG_RAX: ffffffffffffffdd
<4> [368.738421] RAX: ffff88888bd2c040 RBX: ffffe8ffffbaf5f8 RCX: 0000000000000000
<4> [368.738424] RDX: 0000000000000046 RSI: 0000000000000006 RDI: ffffffff82379975
<4> [368.738426] RBP: ffffffff826b2c60 R08: 0000000000000000 R09: 0000000000000000
<4> [368.738428] R10: 0000000000000000 R11: 0000000000000000 R12: 000000548942c884
<4> [368.738431] R13: 0000000000000001 R14: 0000000000000001 R15: 0000000000000001
<4> [368.738438] ? cpuidle_enter_state+0xb2/0x420
<4> [368.738443] cpuidle_enter+0x24/0x40
<4> [368.738447] do_idle+0x1f7/0x260
<4> [368.738452] cpu_startup_entry+0x14/0x20
<4> [368.738456] start_secondary+0x15f/0x1b0
<4> [368.738460] secondary_startup_64+0xa4/0xb0
<4> [368.738466] Modules linked in: i915(+) vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul ax88179_178a crc32_pclmul usbnet snd_intel_dspcfg snd_hda_codec mii snd_hwdep snd_hda_core e1000e ghash_clmulni_intel snd_pcm ptp pps_core mei_me mei intel_lpss_pci prime_numbers [last unloaded: i915]
<4> [368.738484] ---[ end trace 320c97b557187152 ]---